# emdr-tools

./: .gitignore
.github/workflows/: test.yml
frontend/: .env.production  README.md  docker-compose.yml  package-lock.json  package.json
frontend/src/: socket.ts
frontend/src/components/: MovingCircle.tsx
frontend/src/pages/: Client.tsx  Host.css  Host.tsx
server/: Cargo.toml  build.rs
server/src/: main.rs  messages.proto
servers/nodejs/: package-lock.json  package.json  params.proto  server.js
servers/rust-server/: Cargo.toml  build.rs  rustfmt.toml
servers/rust-server/src/: connection_handler.rs  lib.rs  main.rs  messages.proto
servers/rust-server/tests/: common.rs  server_tests.rs
shared/: messages.proto
