[package]
name = "rust-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27"
futures-util = "0.3"
prost = "0.14.1"
prost-types = "0.14.1"
anyhow = "1.0.99"
uuid = { version = "1.0", features = ["v4", "serde"] }

[build-dependencies]
prost-build = "0.14.1"
